--- a/hobbies.html
+++ b/hobbies.html
@@ -31,7 +31,7 @@
    
   <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="/index.html/">Home</a>
+  <a href="index.html">Home</a>
   <a href="">Hobbies</a>
   
 
