--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
   <a href="">Home</a>
   <a href="hobbies.html">Hobbies</a>
-  <a href = "RTV/RTV.html" target ="_blank" rel ="noopener noreferrer">RTV Home</a>
+  <a href = "/RTV/RTV.html/" target ="_blank" rel ="noopener noreferrer">RTV Home</a>
   
   
 </div>
