--- a/RTV/NewRTV.html
+++ b/RTV/NewRTV.html
@@ -43,7 +43,7 @@ function closeNav() {
 </script>  
 
 
-<body a href = "rtv/NewRTV"></a>
+<body a href = "NewRTV"></a>
   
 </!--defining the part that needs to be returned and the cause of why it is faulty--/>
 
