--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
   <a href="">Home</a>
   <a href="hobbies.html">Hobbies</a>
-  <a href = "PIDsHome.html/" target ="_blank" rel ="noopener noreferrer">P.I.D.s</a>
+  <a href = "https://ejett5.github.io/PIDs/" target ="_blank" rel ="noopener noreferrer">P.I.D.s</a>
   
   
 </div>
